Bundle JS files

--- a/index.html
+++ b/index.html
@@ -32,16 +32,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="js/bundled.js"></script>
 
 </head>
 
