Add script defer

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <![endif]-->
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/jquery/jquery.js" defer></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.js" defer></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.js" defer></script>
+    <script src="vendor/scrollreveal/scrollreveal.js" defer></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.js" defer></script>
 
 </head>
 
@@ -273,7 +273,7 @@
     </section>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.js"></script>
+    <script src="js/creative.js" defer></script>
 
 </body>
 
