--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <!-- Theme CSS -->
     <link href="css/creative.css" rel="stylesheet">
 
+    <link
+      rel="stylesheet"
+      media="(min-width: 768px)"
+      href="css/min-width-768px.css" />
+
+    <link
+      rel="stylesheet"
+      media="(min-width: 992px)"
+      href="css/min-width-992px.css" />
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
